--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "lib": "lib"
   },
   "scripts": {
+    "lint": "eslint '**/*.js'",
     "test": "jest --coverage"
   },
   "repository": {
@@ -22,6 +23,7 @@
   "homepage": "https://github.com/401-advanced-javascript-fatemaOwedah/api-server-lab07#readme",
   "dependencies": {
     "dotenv": "^8.2.0",
+    "eslint": "^7.1.0",
     "express": "^4.17.1",
     "jest": "^26.0.1",
     "supertest": "^4.0.2"
